# har-window-net

./: .gitignore  README.md  pyproject.toml  training_report.md
docs/: conversion.md  datasets.md  index.md  installation.md  phase-a-output.md  testing.md  training-report.md  training.md  troubleshooting.md  window-contract.md
exported_models/edge17_full/: model.onnx  model.onnx.data
exported_models/edge17_v6_lowlr/: label_map.json  model.onnx  model.onnx.data  model_meta.json
har_windownet/: __init__.py
har_windownet/cli/: __init__.py  build_dataset.py  compare_runs.py  eval.py  export_model.py  train.py  validate_dataset.py
har_windownet/contracts/: __init__.py  labels.py  window.py
har_windownet/datasets/: __init__.py
har_windownet/datasets/custom10/: __init__.py  builder.py  config.py  labels.py  preprocess.py  reader.py  skeleton_reader.py  windowing.py
har_windownet/datasets/edge17/: __init__.py  builder.py  labels.py  reader.py  windowing.py
har_windownet/datasets/ntu/: __init__.py  builder.py  config.py  mapping.py  preprocess.py  reader.py  windowing.py
har_windownet/export/: __init__.py  inference_onnx.py  onnx_export.py
har_windownet/features/: __init__.py  transforms.py
har_windownet/training/: __init__.py  datamodule.py  datasets.py  metrics.py  trainer.py  transforms.py
har_windownet/training/models/: __init__.py  gru.py  tcn.py
har_windownet/validate/: __init__.py
tests/: __init__.py  conftest.py  test_cli_compare_runs.py  test_contracts_labels.py  test_contracts_window.py  test_custom10_builder.py  test_custom10_contract.py  test_custom10_labels.py  test_custom10_reader.py  test_custom10_windowing.py  test_edge17_builder.py  test_edge17_reader.py  test_features_transforms.py  test_ntu_builder.py  test_ntu_mapping.py  test_ntu_reader.py  test_ntu_windowing.py  test_training_metrics.py  test_training_models.py
tests/assets/custom10/A001_WALKING/: clip_short.json
tests/assets/custom10/A002_SITTING/: clip_long.json
tests/assets/edge17/: sample.skeleton.jsonl
