[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "har-windownet"
version = "0.1.0"
description = "Training workspace: NTU RGB+D 120 → Window format dataset + HAR model"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "HAR-WindowNet" }]
dependencies = [
    "numpy>=1.24",
    "pydantic>=2.0",
    "orjson>=3.9",
    "tqdm>=4.65",
    "pyarrow>=14.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.1", "pytest-cov>=4.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-ra -q"

[project.scripts]

[tool.setuptools.packages.find]
where = ["."]
include = ["har_windownet*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
