[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "har-windownet"
version = "0.1.0"
description = "Training workspace: NTU RGB+D 120 → Window format dataset + HAR model"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "HAR-WindowNet" }]
dependencies = [
    "numpy>=1.24",
    "pydantic>=2.0",
    "orjson>=3.9",
    "tqdm>=4.65",
    "pyarrow>=14.0",
    "torch>=2.0",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.1", "pytest-cov>=4.0"]
# onnx + onnxscript for export; onnxruntime has no wheel on Python 3.14 yet — install separately if needed for inference
export = ["onnx>=1.14", "onnxscript>=0.1.0"]
export-inference = ["onnxruntime>=1.14"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-ra -q"

[project.scripts]
har-windownet-build-dataset = "har_windownet.cli.build_dataset:main"
har-windownet-validate-dataset = "har_windownet.cli.validate_dataset:main"
har-windownet-train = "har_windownet.cli.train:main"
har-windownet-eval = "har_windownet.cli.eval:main"
har-windownet-export-model = "har_windownet.cli.export_model:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["har_windownet*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
